Add decoared_gof as seperate file.

--- a/canvas.html
+++ b/canvas.html
@@ -45,7 +45,7 @@
         <script src="TDArray.js"></script>
         <script src="gof.js"></script>
         <script src="grid.js"></script>
-	<script stc="workspace.js"></script>
+	<script src="decorated_gof.js"></script>
         <script src="controller.js"></script>
     </body>
 </html>
