--- a/canvas.html
+++ b/canvas.html
@@ -17,7 +17,7 @@
       <h2> Controls </h2>
         <ul>
           <li> Click on a cell to toggle it on/off.</li>
-          <li> Drag across a region of cells to the underlying pattern.</li>
+          <li> Drag across a region of cells to save the underlying pattern.</li>
           <li> Shift click to copy the last saved pattern The pattern will then be oriented so that the upper left corner is at the click position.</li>
           <li> The Go/Stop button will toggle iteration.</li>
           <li> The slide controls the rate of iteration.</li>
