--- a/canvas.html
+++ b/canvas.html
@@ -54,6 +54,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/patterns.js"></script>
 	<script src="js/utils.js"></script>
+	<script src="js/ids.js"></script>
+	<script src="js/observables.js"></script>
         <script src="js/rate_controller.js"></script>
         <script src="js/TDArray.js"></script>
         <script src="js/gof.js"></script>
